# data-entry-app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py
